src/conv-c2c/y.output
Terminals unused in grammar

    CGRA_MO2


State 4 conflicts: 8 shift/reduce
State 21 conflicts: 8 shift/reduce, 10 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program line
    2        | line

    3 line: EOL
    4     | ARMV8
    5     | EMAX6ABEGIN VARIABLE expr
    6     | EMAX6ASTATEM EMAX6ABODY
    7     | EMAX6AEND
    8     | EMAX6ADRAIN
    9     | EMAX6TBEGIN VARIABLE
   10     | EMAX6TSTATEM EMAX6TBODY
   11     | EMAX6TEND

   12 EMAX6ABODY: EMAX6AUNIT
   13           | EMAX6ABODY EMAX6AUNIT

   14 EMAX6AUNIT: CGRA_WHILE '(' VARIABLE CGRA_DECR ')' '{'
   15           | CGRA_FOR '(' CHIP '=' expr ';' CHIP '<' expr ';' CHIP CGRA_INCR ')' '{'
   16           | CGRA_FOR '(' INITNO '=' expr ',' LOOPNO '=' ASIS ',' XVARIABLE '=' ASIS ';' LOOPNO CGRA_DECR ';' INITNO '=' expr ')' '{'
   17           | CGRA_CEX '(' expr ',' cex_dst ',' cex_src ',' cex_src ',' cex_src ',' cex_src ',' expr ')' ';'
   18           | CGRA_EX4 '(' expr ',' ex4_dstd ',' ex4_src ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' ex4_src ')' ';'
   19           | CGRA_EX4 '(' expr ',' exe_dstd ',' exe_src1 ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' exe_src5 ')' ';'
   20           | CGRA_EX4 '(' expr ',' exe_dstd ',' INITNO '?' exe_src1 ':' exe_src1 ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' exe_src5 ')' ';'
   21           | CGRA_EXE '(' expr ',' exe_dstd ',' exe_src1 ',' expr ',' exe_src2 ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'
   22           | CGRA_EXE '(' expr ',' exe_dstd ',' INITNO '?' exe_src1 ':' exe_src1 ',' expr ',' exe_src2 ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'
   23           | CGRA_EXE '(' expr ',' exe_dstd ',' exe_src1 ',' expr ',' INITNO '?' exe_src2 ':' expr ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'
   24           | CGRA_MO4 '(' expr ',' mop_ex ',' mo4_srcdst ',' mop_base ',' mop_offset ',' expr ',' mop_top ',' mop_len ',' expr ',' force ',' mop_top ',' mop_len ')' ';'
   25           | CGRA_MOP '(' expr ',' mop_ex ',' mop_srcdst ',' mop_base ',' mop_offset ',' expr ',' mop_top ',' mop_len ',' expr ',' force ',' mop_top ',' mop_len ')' ';'
   26           | '}'
   27           | %empty

   28 cex_src: expr
   29        | VARIABLE
   30        | CGRA_ULL VARIABLE

   31 cex_dst: '&' EXRNO

   32 ex4_src: expr
   33        | XVARIABLE
   34        | CGRA_ULL XVARIABLE
   35        | ALRNO
   36        | BDRNO

   37 ex4_dstd: XVARIABLE
   38         | ALRNO

   39 exe_src1: expr
   40         | XVARIABLE
   41         | CGRA_ULL XVARIABLE
   42         | ALRNO '[' expr ']'
   43         | BDRNO '[' expr ']'

   44 exe_src2: expr
   45         | XVARIABLE
   46         | CGRA_ULL XVARIABLE
   47         | ALRNO '[' expr ']'
   48         | BDRNO '[' expr ']'

   49 exe_src3: expr
   50         | XVARIABLE
   51         | CGRA_ULL XVARIABLE
   52         | ALRNO '[' expr ']'
   53         | BDRNO '[' expr ']'

   54 exe_src4: expr
   55         | XVARIABLE
   56         | CGRA_ULL XVARIABLE
   57         | ALRNO '[' expr ']'
   58         | BDRNO '[' expr ']'

   59 exe_src5: expr
   60         | XVARIABLE
   61         | CGRA_ULL XVARIABLE
   62         | ALRNO '[' expr ']'
   63         | BDRNO '[' expr ']'

   64 exe_dstd: '&' XVARIABLE
   65         | '&' ALRNO '[' expr ']'

   66 mop_ex: expr
   67       | EXRNO

   68 mo4_srcdst: XVARIABLE
   69           | ALRNO
   70           | BDRNO

   71 mop_srcdst: '&' XVARIABLE
   72           | '&' ALRNO '[' expr ']'
   73           | '&' BDRNO '[' expr ']'

   74 mop_base: expr
   75         | XVARIABLE
   76         | CGRA_ULL XVARIABLE
   77         | XVARIABLE CGRA_INCR
   78         | CGRA_ULL '(' XVARIABLE CGRA_INCR ')'
   79         | BDRNO '[' expr ']'

   80 mop_offset: expr
   81           | XVARIABLE
   82           | CGRA_ULL XVARIABLE
   83           | BDRNO '[' expr ']'

   84 mop_top: expr
   85        | XVARIABLE
   86        | CGRA_ULL XVARIABLE

   87 mop_len: expr
   88        | VARIABLE
   89        | CGRA_ULL VARIABLE

   90 force: expr
   91      | VARIABLE
   92      | CGRA_ULL VARIABLE

   93 XVARIABLE: CHIP
   94          | VARIABLE '[' CHIP ']'
   95          | VARIABLE

   96 expr: term
   97     | expr '+' term
   98     | expr '-' term
   99     | expr CGRA_SLL term
  100     | expr CGRA_SRL term
  101     | expr '&' term
  102     | expr '^' term
  103     | expr '|' term

  104 term: factor
  105     | '~' factor
  106     | '-' factor
  107     | term '*' factor
  108     | term '/' factor

  109 factor: '(' expr ')'
  110       | number

  111 number: IMMEDIATE
  112       | CGRA_ULL IMMEDIATE
  113       | CGRA_UINT IMMEDIATE

  114 EMAX6TBODY: TRAN_READ
  115           | TRAN_WRITE


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 31 64 65 71 72 73 101
    '(' (40) 14 15 16 17 18 19 20 21 22 23 24 25 78 109
    ')' (41) 14 15 16 17 18 19 20 21 22 23 24 25 78 109
    '*' (42) 107
    '+' (43) 97
    ',' (44) 16 17 18 19 20 21 22 23 24 25
    '-' (45) 98 106
    '/' (47) 108
    ':' (58) 20 22 23
    ';' (59) 15 16 17 18 19 20 21 22 23 24 25
    '<' (60) 15
    '=' (61) 15 16
    '?' (63) 20 22 23
    '[' (91) 42 43 47 48 52 53 57 58 62 63 65 72 73 79 83 94
    ']' (93) 42 43 47 48 52 53 57 58 62 63 65 72 73 79 83 94
    '^' (94) 102
    '{' (123) 14 15 16
    '|' (124) 103
    '}' (125) 26
    '~' (126) 105
    error (256)
    EOL (258) 3
    ARMV8 (259) 4
    EMAX6ABEGIN (260) 5
    EMAX6ASTATEM (261) 6
    EMAX6AEND (262) 7
    EMAX6ADRAIN (263) 8
    EMAX6TBEGIN (264) 9
    EMAX6TSTATEM (265) 10
    EMAX6TEND (266) 11
    CGRA_ULL (267) 30 34 41 46 51 56 61 76 78 82 86 89 92 112
    CGRA_UINT (268) 113
    CGRA_SLL (269) 99
    CGRA_SRL (270) 100
    CGRA_WHILE (271) 14
    CGRA_FOR (272) 15 16
    CGRA_CEX (273) 17
    CGRA_EX4 (274) 18 19 20
    CGRA_EXE (275) 21 22 23
    CGRA_MO4 (276) 24
    CGRA_MO2 (277)
    CGRA_MOP (278) 25
    CGRA_DECR (279) 14 16
    CGRA_INCR (280) 15 77 78
    TRAN_READ (281) 114
    TRAN_WRITE (282) 115
    IMMEDIATE (283) 111 112 113
    EXRNO (284) 31 67
    ALRNO (285) 35 38 42 47 52 57 62 65 69 72
    BDRNO (286) 36 43 48 53 58 63 70 73 79 83
    CHIP (287) 15 93 94
    INITNO (288) 16 20 22 23
    LOOPNO (289) 16
    VARIABLE (290) 5 9 14 29 30 88 89 91 92 94 95
    ASIS (291) 16


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1 2
        on right: 0 1
    line (59)
        on left: 3 4 5 6 7 8 9 10 11
        on right: 1 2
    EMAX6ABODY (60)
        on left: 12 13
        on right: 6 13
    EMAX6AUNIT (61)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 12 13
    cex_src (62)
        on left: 28 29 30
        on right: 17
    cex_dst (63)
        on left: 31
        on right: 17
    ex4_src (64)
        on left: 32 33 34 35 36
        on right: 18 19 20
    ex4_dstd (65)
        on left: 37 38
        on right: 18
    exe_src1 (66)
        on left: 39 40 41 42 43
        on right: 19 20 21 22 23
    exe_src2 (67)
        on left: 44 45 46 47 48
        on right: 21 22 23
    exe_src3 (68)
        on left: 49 50 51 52 53
        on right: 21 22 23
    exe_src4 (69)
        on left: 54 55 56 57 58
        on right: 21 22 23
    exe_src5 (70)
        on left: 59 60 61 62 63
        on right: 19 20 21 22 23
    exe_dstd (71)
        on left: 64 65
        on right: 19 20 21 22 23
    mop_ex (72)
        on left: 66 67
        on right: 24 25
    mo4_srcdst (73)
        on left: 68 69 70
        on right: 24
    mop_srcdst (74)
        on left: 71 72 73
        on right: 25
    mop_base (75)
        on left: 74 75 76 77 78 79
        on right: 24 25
    mop_offset (76)
        on left: 80 81 82 83
        on right: 24 25
    mop_top (77)
        on left: 84 85 86
        on right: 24 25
    mop_len (78)
        on left: 87 88 89
        on right: 24 25
    force (79)
        on left: 90 91 92
        on right: 24 25
    XVARIABLE (80)
        on left: 93 94 95
        on right: 16 33 34 37 40 41 45 46 50 51 55 56 60 61 64 68 71 75 76 77 78 81 82 85 86
    expr (81)
        on left: 96 97 98 99 100 101 102 103
        on right: 5 15 16 17 18 19 20 21 22 23 24 25 28 32 39 42 43 44 47 48 49 52 53 54 57 58 59 62 63 65 66 72 73 74 79 80 83 84 87 90 97 98 99 100 101 102 103 109
    term (82)
        on left: 104 105 106 107 108
        on right: 96 97 98 99 100 101 102 103 107 108
    factor (83)
        on left: 109 110
        on right: 104 105 106 107 108
    number (84)
        on left: 111 112 113
        on right: 110
    EMAX6TBODY (85)
        on left: 114 115
        on right: 10


State 0

    0 $accept: . program $end

    EOL           shift, and go to state 1
    ARMV8         shift, and go to state 2
    EMAX6ABEGIN   shift, and go to state 3
    EMAX6ASTATEM  shift, and go to state 4
    EMAX6AEND     shift, and go to state 5
    EMAX6ADRAIN   shift, and go to state 6
    EMAX6TBEGIN   shift, and go to state 7
    EMAX6TSTATEM  shift, and go to state 8
    EMAX6TEND     shift, and go to state 9

    program  go to state 10
    line     go to state 11


State 1

    3 line: EOL .

    $default  reduce using rule 3 (line)


State 2

    4 line: ARMV8 .

    $default  reduce using rule 4 (line)


State 3

    5 line: EMAX6ABEGIN . VARIABLE expr

    VARIABLE  shift, and go to state 12


State 4

    6 line: EMAX6ASTATEM . EMAX6ABODY

    CGRA_WHILE  shift, and go to state 13
    CGRA_FOR    shift, and go to state 14
    CGRA_CEX    shift, and go to state 15
    CGRA_EX4    shift, and go to state 16
    CGRA_EXE    shift, and go to state 17
    CGRA_MO4    shift, and go to state 18
    CGRA_MOP    shift, and go to state 19
    '}'         shift, and go to state 20

    CGRA_WHILE  [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_FOR    [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_CEX    [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_EX4    [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_EXE    [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_MO4    [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_MOP    [reduce using rule 27 (EMAX6AUNIT)]
    '}'         [reduce using rule 27 (EMAX6AUNIT)]
    $default    reduce using rule 27 (EMAX6AUNIT)

    EMAX6ABODY  go to state 21
    EMAX6AUNIT  go to state 22


State 5

    7 line: EMAX6AEND .

    $default  reduce using rule 7 (line)


State 6

    8 line: EMAX6ADRAIN .

    $default  reduce using rule 8 (line)


State 7

    9 line: EMAX6TBEGIN . VARIABLE

    VARIABLE  shift, and go to state 23


State 8

   10 line: EMAX6TSTATEM . EMAX6TBODY

    TRAN_READ   shift, and go to state 24
    TRAN_WRITE  shift, and go to state 25

    EMAX6TBODY  go to state 26


State 9

   11 line: EMAX6TEND .

    $default  reduce using rule 11 (line)


State 10

    0 $accept: program . $end
    1 program: program . line

    $end          shift, and go to state 27
    EOL           shift, and go to state 1
    ARMV8         shift, and go to state 2
    EMAX6ABEGIN   shift, and go to state 3
    EMAX6ASTATEM  shift, and go to state 4
    EMAX6AEND     shift, and go to state 5
    EMAX6ADRAIN   shift, and go to state 6
    EMAX6TBEGIN   shift, and go to state 7
    EMAX6TSTATEM  shift, and go to state 8
    EMAX6TEND     shift, and go to state 9

    line  go to state 28


State 11

    2 program: line .

    $default  reduce using rule 2 (program)


State 12

    5 line: EMAX6ABEGIN VARIABLE . expr

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    expr    go to state 35
    term    go to state 36
    factor  go to state 37
    number  go to state 38


State 13

   14 EMAX6AUNIT: CGRA_WHILE . '(' VARIABLE CGRA_DECR ')' '{'

    '('  shift, and go to state 39


State 14

   15 EMAX6AUNIT: CGRA_FOR . '(' CHIP '=' expr ';' CHIP '<' expr ';' CHIP CGRA_INCR ')' '{'
   16           | CGRA_FOR . '(' INITNO '=' expr ',' LOOPNO '=' ASIS ',' XVARIABLE '=' ASIS ';' LOOPNO CGRA_DECR ';' INITNO '=' expr ')' '{'

    '('  shift, and go to state 40


State 15

   17 EMAX6AUNIT: CGRA_CEX . '(' expr ',' cex_dst ',' cex_src ',' cex_src ',' cex_src ',' cex_src ',' expr ')' ';'

    '('  shift, and go to state 41


State 16

   18 EMAX6AUNIT: CGRA_EX4 . '(' expr ',' ex4_dstd ',' ex4_src ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' ex4_src ')' ';'
   19           | CGRA_EX4 . '(' expr ',' exe_dstd ',' exe_src1 ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' exe_src5 ')' ';'
   20           | CGRA_EX4 . '(' expr ',' exe_dstd ',' INITNO '?' exe_src1 ':' exe_src1 ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' exe_src5 ')' ';'

    '('  shift, and go to state 42


State 17

   21 EMAX6AUNIT: CGRA_EXE . '(' expr ',' exe_dstd ',' exe_src1 ',' expr ',' exe_src2 ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'
   22           | CGRA_EXE . '(' expr ',' exe_dstd ',' INITNO '?' exe_src1 ':' exe_src1 ',' expr ',' exe_src2 ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'
   23           | CGRA_EXE . '(' expr ',' exe_dstd ',' exe_src1 ',' expr ',' INITNO '?' exe_src2 ':' expr ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'

    '('  shift, and go to state 43


State 18

   24 EMAX6AUNIT: CGRA_MO4 . '(' expr ',' mop_ex ',' mo4_srcdst ',' mop_base ',' mop_offset ',' expr ',' mop_top ',' mop_len ',' expr ',' force ',' mop_top ',' mop_len ')' ';'

    '('  shift, and go to state 44


State 19

   25 EMAX6AUNIT: CGRA_MOP . '(' expr ',' mop_ex ',' mop_srcdst ',' mop_base ',' mop_offset ',' expr ',' mop_top ',' mop_len ',' expr ',' force ',' mop_top ',' mop_len ')' ';'

    '('  shift, and go to state 45


State 20

   26 EMAX6AUNIT: '}' .

    $default  reduce using rule 26 (EMAX6AUNIT)


State 21

    6 line: EMAX6ASTATEM EMAX6ABODY .
   13 EMAX6ABODY: EMAX6ABODY . EMAX6AUNIT

    CGRA_WHILE  shift, and go to state 13
    CGRA_FOR    shift, and go to state 14
    CGRA_CEX    shift, and go to state 15
    CGRA_EX4    shift, and go to state 16
    CGRA_EXE    shift, and go to state 17
    CGRA_MO4    shift, and go to state 18
    CGRA_MOP    shift, and go to state 19
    '}'         shift, and go to state 20

    $end          reduce using rule 6 (line)
    $end          [reduce using rule 27 (EMAX6AUNIT)]
    EOL           reduce using rule 6 (line)
    EOL           [reduce using rule 27 (EMAX6AUNIT)]
    ARMV8         reduce using rule 6 (line)
    ARMV8         [reduce using rule 27 (EMAX6AUNIT)]
    EMAX6ABEGIN   reduce using rule 6 (line)
    EMAX6ABEGIN   [reduce using rule 27 (EMAX6AUNIT)]
    EMAX6ASTATEM  reduce using rule 6 (line)
    EMAX6ASTATEM  [reduce using rule 27 (EMAX6AUNIT)]
    EMAX6AEND     reduce using rule 6 (line)
    EMAX6AEND     [reduce using rule 27 (EMAX6AUNIT)]
    EMAX6ADRAIN   reduce using rule 6 (line)
    EMAX6ADRAIN   [reduce using rule 27 (EMAX6AUNIT)]
    EMAX6TBEGIN   reduce using rule 6 (line)
    EMAX6TBEGIN   [reduce using rule 27 (EMAX6AUNIT)]
    EMAX6TSTATEM  reduce using rule 6 (line)
    EMAX6TSTATEM  [reduce using rule 27 (EMAX6AUNIT)]
    EMAX6TEND     reduce using rule 6 (line)
    EMAX6TEND     [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_WHILE    [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_FOR      [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_CEX      [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_EX4      [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_EXE      [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_MO4      [reduce using rule 27 (EMAX6AUNIT)]
    CGRA_MOP      [reduce using rule 27 (EMAX6AUNIT)]
    '}'           [reduce using rule 27 (EMAX6AUNIT)]
    $default      reduce using rule 6 (line)

    EMAX6AUNIT  go to state 46


State 22

   12 EMAX6ABODY: EMAX6AUNIT .

    $default  reduce using rule 12 (EMAX6ABODY)


State 23

    9 line: EMAX6TBEGIN VARIABLE .

    $default  reduce using rule 9 (line)


State 24

  114 EMAX6TBODY: TRAN_READ .

    $default  reduce using rule 114 (EMAX6TBODY)


State 25

  115 EMAX6TBODY: TRAN_WRITE .

    $default  reduce using rule 115 (EMAX6TBODY)


State 26

   10 line: EMAX6TSTATEM EMAX6TBODY .

    $default  reduce using rule 10 (line)


State 27

    0 $accept: program $end .

    $default  accept


State 28

    1 program: program line .

    $default  reduce using rule 1 (program)


State 29

  112 number: CGRA_ULL . IMMEDIATE

    IMMEDIATE  shift, and go to state 47


State 30

  113 number: CGRA_UINT . IMMEDIATE

    IMMEDIATE  shift, and go to state 48


State 31

  111 number: IMMEDIATE .

    $default  reduce using rule 111 (number)


State 32

  109 factor: '(' . expr ')'

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    expr    go to state 49
    term    go to state 36
    factor  go to state 37
    number  go to state 38


State 33

  106 term: '-' . factor

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32

    factor  go to state 50
    number  go to state 38


State 34

  105 term: '~' . factor

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32

    factor  go to state 51
    number  go to state 38


State 35

    5 line: EMAX6ABEGIN VARIABLE expr .
   97 expr: expr . '+' term
   98     | expr . '-' term
   99     | expr . CGRA_SLL term
  100     | expr . CGRA_SRL term
  101     | expr . '&' term
  102     | expr . '^' term
  103     | expr . '|' term

    CGRA_SLL  shift, and go to state 52
    CGRA_SRL  shift, and go to state 53
    '&'       shift, and go to state 54
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '^'       shift, and go to state 57
    '|'       shift, and go to state 58

    $default  reduce using rule 5 (line)


State 36

   96 expr: term .
  107 term: term . '*' factor
  108     | term . '/' factor

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60

    $default  reduce using rule 96 (expr)


State 37

  104 term: factor .

    $default  reduce using rule 104 (term)


State 38

  110 factor: number .

    $default  reduce using rule 110 (factor)


State 39

   14 EMAX6AUNIT: CGRA_WHILE '(' . VARIABLE CGRA_DECR ')' '{'

    VARIABLE  shift, and go to state 61


State 40

   15 EMAX6AUNIT: CGRA_FOR '(' . CHIP '=' expr ';' CHIP '<' expr ';' CHIP CGRA_INCR ')' '{'
   16           | CGRA_FOR '(' . INITNO '=' expr ',' LOOPNO '=' ASIS ',' XVARIABLE '=' ASIS ';' LOOPNO CGRA_DECR ';' INITNO '=' expr ')' '{'

    CHIP    shift, and go to state 62
    INITNO  shift, and go to state 63


State 41

   17 EMAX6AUNIT: CGRA_CEX '(' . expr ',' cex_dst ',' cex_src ',' cex_src ',' cex_src ',' cex_src ',' expr ')' ';'

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    expr    go to state 64
    term    go to state 36
    factor  go to state 37
    number  go to state 38


State 42

   18 EMAX6AUNIT: CGRA_EX4 '(' . expr ',' ex4_dstd ',' ex4_src ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' ex4_src ')' ';'
   19           | CGRA_EX4 '(' . expr ',' exe_dstd ',' exe_src1 ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' exe_src5 ')' ';'
   20           | CGRA_EX4 '(' . expr ',' exe_dstd ',' INITNO '?' exe_src1 ':' exe_src1 ',' expr ',' ex4_src ',' expr ',' ex4_src ',' expr ',' expr ',' ex4_src ',' expr ',' exe_src5 ')' ';'

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    expr    go to state 65
    term    go to state 36
    factor  go to state 37
    number  go to state 38


State 43

   21 EMAX6AUNIT: CGRA_EXE '(' . expr ',' exe_dstd ',' exe_src1 ',' expr ',' exe_src2 ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'
   22           | CGRA_EXE '(' . expr ',' exe_dstd ',' INITNO '?' exe_src1 ':' exe_src1 ',' expr ',' exe_src2 ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'
   23           | CGRA_EXE '(' . expr ',' exe_dstd ',' exe_src1 ',' expr ',' INITNO '?' exe_src2 ':' expr ',' expr ',' exe_src3 ',' expr ',' expr ',' exe_src4 ',' expr ',' exe_src5 ')' ';'

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    expr    go to state 66
    term    go to state 36
    factor  go to state 37
    number  go to state 38


State 44

   24 EMAX6AUNIT: CGRA_MO4 '(' . expr ',' mop_ex ',' mo4_srcdst ',' mop_base ',' mop_offset ',' expr ',' mop_top ',' mop_len ',' expr ',' force ',' mop_top ',' mop_len ')' ';'

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    expr    go to state 67
    term    go to state 36
    factor  go to state 37
    number  go to state 38


State 45

   25 EMAX6AUNIT: CGRA_MOP '(' . expr ',' mop_ex ',' mop_srcdst ',' mop_base ',' mop_offset ',' expr ',' mop_top ',' mop_len ',' expr ',' force ',' mop_top ',' mop_len ')' ';'

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    expr    go to state 68
    term    go to state 36
    factor  go to state 37
    number  go to state 38


State 46

   13 EMAX6ABODY: EMAX6ABODY EMAX6AUNIT .

    $default  reduce using rule 13 (EMAX6ABODY)


State 47

  112 number: CGRA_ULL IMMEDIATE .

    $default  reduce using rule 112 (number)


State 48

  113 number: CGRA_UINT IMMEDIATE .

    $default  reduce using rule 113 (number)


State 49

   97 expr: expr . '+' term
   98     | expr . '-' term
   99     | expr . CGRA_SLL term
  100     | expr . CGRA_SRL term
  101     | expr . '&' term
  102     | expr . '^' term
  103     | expr . '|' term
  109 factor: '(' expr . ')'

    CGRA_SLL  shift, and go to state 52
    CGRA_SRL  shift, and go to state 53
    ')'       shift, and go to state 69
    '&'       shift, and go to state 54
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '^'       shift, and go to state 57
    '|'       shift, and go to state 58


State 50

  106 term: '-' factor .

    $default  reduce using rule 106 (term)


State 51

  105 term: '~' factor .

    $default  reduce using rule 105 (term)


State 52

   99 expr: expr CGRA_SLL . term

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    term    go to state 70
    factor  go to state 37
    number  go to state 38


State 53

  100 expr: expr CGRA_SRL . term

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    term    go to state 71
    factor  go to state 37
    number  go to state 38


State 54

  101 expr: expr '&' . term

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    term    go to state 72
    factor  go to state 37
    number  go to state 38


State 55

   97 expr: expr '+' . term

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    term    go to state 73
    factor  go to state 37
    number  go to state 38


State 56

   98 expr: expr '-' . term

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    term    go to state 74
    factor  go to state 37
    number  go to state 38


State 57

  102 expr: expr '^' . term

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    term    go to state 75
    factor  go to state 37
    number  go to state 38


State 58

  103 expr: expr '|' . term

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32
    '-'        shift, and go to state 33
    '~'        shift, and go to state 34

    term    go to state 76
    factor  go to state 37
    number  go to state 38


State 59

  107 term: term '*' . factor

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32

    factor  go to state 77
    number  go to state 38


State 60

  108 term: term '/' . factor

    CGRA_ULL   shift, and go to state 29
    CGRA_UINT  shift, and go to state 30
    IMMEDIATE  shift, and go to state 31
    '('        shift, and go to state 32

    factor  go to state 78
    number  go to state 38


State 61

   14 EMAX6AUNIT: CGRA_WHILE '(' VARIABLE . CGRA_DECR ')' '{'

    CGRA_DECR  shift, and go to state 79


State 62

   15 EMAX6AUNIT: CGRA_FOR '(' CHIP . '=' expr ';' CHIP '<' expr ';' CHIP CGRA_INCR ')' '{'

    '='  shift, and go to state 80


State 63

   16 EMAX6AUNIT: CGRA_FOR '(' INITNO . '=' expr ',' LOOPNO '=' ASIS ',' XVARIABLE '=' ASIS ';' LOOPNO CGRA_DECR ';' INITNO '=' expr ')' '{'

    '='  shift, and go to state 81


State 64

   17 EMAX6AUNIT: CGRA_CEX '(' expr . ',' cex_dst ',' cex_src ',' cex_src ',' cex_src ',' cex_src ',' expr ')' ';'
   97 expr: expr . '+' term
   98     | expr . '-' term
   99     | expr . CGRA_SLL term
  100     | expr . CGRA_SRL term
  101     | expr . '&' term
  102     | expr . '^' term
  103     | expr . '|' term

    CGRA_SLL  shift, and go to state 52
    CGRA_SRL  shift, and go to state 53
    ','       shift, and go to state 82
    '&'       shift, and go to state 54
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '^'       shift, and go to state 57
    '|'       shift, and go to state 58


State 65
